Bug 433178 - Moving with screens in the view moves with the whole window
Summary: Moving with screens in the view moves with the whole window
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: 5.21.0
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords: regression
: 433280 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-18 15:48 UTC by Jan Grulich
Modified: 2021-02-24 16:21 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Grulich 2021-02-18 15:48:53 UTC
SUMMARY
I'm unable to position my screens, because when I try to move with any screen in the view, it moves with the whole window. 

STEPS TO REPRODUCE
1. Move with a screen in the view


OBSERVED RESULT
The whole window (system settings) is moved.

EXPECTED RESULT
Only the screen in the view is moved.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 34
(available in About System)
KDE Plasma Version: 5.21.0
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2021-02-18 17:03:23 UTC
Known issue; Marco, could you look into it? Thanks!
Comment 2 Nate Graham 2021-02-22 23:52:52 UTC
*** Bug 433280 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2021-02-24 16:17:30 UTC
Git commit 614a780d45fc600735c1893e3a0aa2a633cd31e1 by Nate Graham, on behalf of Marco Martin.
Committed on 24/02/2021 at 16:17.
Pushed by ngraham into branch 'master'.

Start the window drag from the QStyle

Make again the root item accept mouse clicks, so the qwidget
part won't take over. also ungrab the mouse of the QQuickItem
as soon as the system move start, so won't eat the first click
after the system move has been performed. Being a QQuickItem
that accepts the mouse press, Input Handlers know how to steal
the event from it even if they don't accept it.

This reverts commit 6919b948ca46ea1c2f100c90dd5326edfdb131f1.
FIXED-IN: 5.21.2

M  +37   -6    kstyle/breezewindowmanager.cpp
M  +7    -0    kstyle/breezewindowmanager.h

https://invent.kde.org/plasma/breeze/commit/614a780d45fc600735c1893e3a0aa2a633cd31e1
Comment 4 Nate Graham 2021-02-24 16:21:18 UTC
Git commit da9593d379c25d08e8cd356f472fa561f9fda5f8 by Nate Graham, on behalf of Marco Martin.
Committed on 24/02/2021 at 16:21.
Pushed by ngraham into branch 'Plasma/5.21'.

Start the window drag from the QStyle

Make again the root item accept mouse clicks, so the qwidget
part won't take over. also ungrab the mouse of the QQuickItem
as soon as the system move start, so won't eat the first click
after the system move has been performed. Being a QQuickItem
that accepts the mouse press, Input Handlers know how to steal
the event from it even if they don't accept it.

This reverts commit 6919b948ca46ea1c2f100c90dd5326edfdb131f1.
FIXED-IN: 5.21.2


(cherry picked from commit 614a780d45fc600735c1893e3a0aa2a633cd31e1)

M  +37   -6    kstyle/breezewindowmanager.cpp
M  +7    -0    kstyle/breezewindowmanager.h

https://invent.kde.org/plasma/breeze/commit/da9593d379c25d08e8cd356f472fa561f9fda5f8