Start the window drag from the QStyle

Make again the root item accept mouse clicks, so the qwidget
part won't take over. also ungrab the mouse of the QQuickItem
as soon as the system move start, so won't eat the first click
after the system move has been performed. Being a QQuickItem
that accepts the mouse press, Input Handlers know how to steal
the event from it even if they don't accept it.

This reverts commit 6919b948ca46ea1c2f100c90dd5326edfdb131f1.

BUG: 433178
FIXED-IN: 5.21.2