kstyle/breezewindowmanager.h
@@ -242,6 +242,13 @@ namespace Breeze
         //* true if drag is locked
         bool _locked = false;
 
+        //* true if the event we are intercepting passed trough a QQuickWidget.
+        /**In this case we shouldn't start a drag, because if it was to start, we would have done it in the event filter of a qquickwidget.
+         * Event handlers don't accept input events, but they do block QQuickItems to receive the event, so the event may have been
+         * managed by an handler and not blocked by the root qml item.
+         **/
+        bool _eventInQQuickWidget = false;
+
         //* application event filter
         QObject* _appEventFilter = nullptr;
 
